Use blanket implementation on Recognizable trait

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,22 @@
 [package]
 name = "noa-parser"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2024"
+homepage = "https://github.com/Akanoa/noa-parser"
+repository = "https://github.com/Akanoa/noa-parser"
+documentation = "https://docs.rs/noa-parser"
+authors = [
+    "Akanoa <dev@guern.eu>"
+]
+description = "Noa parser is an extensible general purpose framework parser allowing to parser any type of data without allocation."
+publish = true
+keywords = [
+    "parser",
+    "lexer",
+    "tokenizer",
+]
+license-file = "LICENSE"
+readme = "Readme.md"
 
 [dependencies]
 thiserror = "2.0.12"
