--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,19 +11,25 @@ env:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
     - name: Build
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+
+  publish:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
     - uses: actions-rs/toolchain@v1
       with:
        toolchain: stable
        override: true
-    - uses: katyo/publish-crates@v2
+    - name: Publish to crates.io
+      uses: katyo/publish-crates@v2
       with:
        registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+
