--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "elyze"
-version = "1.0.3"
+version = "1.0.4"
 edition = "2024"
 homepage = "https://github.com/Elyze-Parser/elyze"
 repository = "https://github.com/Elyze-Parser/elyze"
@@ -20,3 +20,6 @@ readme = "Readme.md"
 
 [dependencies]
 thiserror = "2.0.12"
+
+[lints]
+clippy.needless_doctest_main = "allow"
