--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ readme = "Readme.md"
 
 [dependencies]
 thiserror = "2.0.12"
+rand = "0.9.1"
+rand_chacha = "0.9.0"
 
 [lints]
 clippy.needless_doctest_main = "allow"
